--- a/src/CSharp/CSharp.csproj
+++ b/src/CSharp/CSharp.csproj
@@ -9,6 +9,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="NCodeBuilder" Version="0.1.2" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
